Finalising publishing of first draft.

--- a/Content/B-Introduction-Topics/1-Introduction.htm
+++ b/Content/B-Introduction-Topics/1-Introduction.htm
@@ -11,5 +11,6 @@
         <p>Suspension, too, has evolved to the point where most motorcycles have some form of adjustability, allowing the rider to fine-tune their motorcycle's comfort and handling.</p>
         <p>In the past, suspension was seen as a black art. This put a lot of people off making adjustments, leaving them saying, "The manufacturer knows better than me...".</p>
         <p>This resource is meant to provide information that shows suspension is not a black art but a series of expected outcomes from adjusting "clicky things". It will hopefully give riders the confidence to change the suspension settings the factory uses (based on 55-kilogram factory test riders?) and find more comfortable settings that improve safety and the riding experience.</p>
+        <p MadCap:conditions="Default.ScreenOnly,Default.Mobile,Default.Tablet,Default.Web">A pdf version of this guide is available <a href="http://motorcyclementors.info/suspension/downloads/SuspensionGuide.pdf" target="_blank" title="A pdf version of this guide can be downlaoded through this link" alt="Download a pdf version of this guide using the link.">here</a>.</p>
     </body>
 </html>
